--- a/Streamlit/requirements.txt
+++ b/Streamlit/requirements.txt
@@ -1,511 +1,7 @@
-aiohttp==3.9.5
-aiosignal==1.3.1
-alembic==1.13.1
-altair==4.2.2
-amqp==5.2.0
-annotated-types==0.6.0
-antiorm==1.2.1
-anyio==3.7.1
-appdirs==1.4.4
-argilla==1.28.0
-arxiv==2.1.0
-asgiref==3.5.0
-astor==0.8.1
-asttokens==2.4.1
-async-timeout==4.0.3
-attrs==23.2.0
-azure-core==1.26.4
-azure-storage-blob==12.16.0
-backoff==2.2.1
-base58==2.1.1
-bcrypt==4.0.1
-beautifulsoup4==4.12.3
-bertopic==0.16.1
-billiard==3.6.4.0
-bitarray==2.9.2
-bitsandbytes==0.43.1
-blinker==1.6.3
-blis==0.7.11
-Brotli==1.1.0
-brotlipy==0.7.0
-bs4==0.0.1
-bson==0.5.10
-build==1.2.1
-CacheControl==0.12.10
-cachetools==5.3.2
-cachy==0.3.0
-cassandra-driver==3.29.1
-cassio==0.1.7
-catalogue==2.0.10
-celery==5.2.7
-certifi==2022.12.7
-cffi==1.15.1
-chardet==4.0.0
-charset-normalizer==2.0.4
-Chroma==0.2.0
-chroma-hnswlib==0.7.3
-chromadb==0.4.24
-cleo==0.8.1
-click==8.1.7
-click-didyoumean==0.3.0
-click-plugins==1.1.1
-click-repl==0.3.0
-clikit==0.6.2
-cloudpathlib==0.18.1
-cmake==3.28.3
-colorama==0.4.6
-coloredlogs==15.0.1
-confection==0.1.5
-connection==2021.7.20
-contourpy==1.2.0
-crashtest==0.3.1
-crewai==0.30.11
-crewai-tools==0.2.6
-cron_descriptor==1.4.0
-cryptography==39.0.1
-csvloader==0.0.2
-ctransformers==0.2.27
-cupshelpers==1.0
-cycler==0.12.1
-cymem==2.0.8
-Cython==0.29.37
-cytoolz==0.12.3
-dataclasses-json==0.5.14
-datasets==2.14.6
-db==0.1.1
-dbus-python==1.2.18
-decorator==5.1.1
-defer==1.0.6
-Deprecated==1.2.14
-deprecation==2.1.0
-dill==0.3.7
-distlib==0.3.4
-distro==1.9.0
-distro-info==1.1+ubuntu0.2
-Django==3.2.7
-django-celery-beat==2.5.0
-django-celery-results==2.4.0
-django-cors-headers==3.14.0
-django-filter==2.4.0
-django-storages==1.13.2
-django-timezone-field==6.1.0
-djangorestframework==3.12.3
-djongo==1.3.6
-dnspython==2.5.0
-docarray==0.32.1
-docopt==0.6.2
-docstring-parser==0.15
-docx2txt==0.8
-drf-extensions==0.7.1
-drf-spectacular==0.26.2
-duckduckgo_search==6.1.2
-duplicity==0.8.21
-ecdsa==0.18.0
-embedchain==0.1.102
-en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl#sha256=86cc141f63942d4b2c5fcee06630fd6f904788d2f0ab005cce45aadb8fb73889
-entrypoints==0.4
-et-xmlfile==1.1.0
-eth-abi==2.2.0
-eth-account==0.5.9
-eth-hash==0.7.0
-eth-keyfile==0.5.1
-eth-keys==0.3.4
-eth-rlp==0.2.1
-eth-typing==2.3.0
-eth-utils==1.9.5
-exceptiongroup==1.1.3
-executing==2.0.1
-faiss-cpu==1.7.4
-Faker==25.1.0
-fastapi==0.104.0
-fasteners==0.14.1
-favicon==0.7.0
-feedparser==6.0.10
-filelock==3.13.0
-Flask==3.0.0
-flatbuffers==24.3.25
-fonttools==4.49.0
-frozenlist==1.4.0
-fsspec==2023.10.0
-future==0.18.3
-gcloud==0.18.3
-geomet==0.2.1.post1
-gitdb==4.0.11
-GitPython==3.1.40
-google-ai-generativelanguage==0.6.4
-google-api-core==2.17.1
-google-api-python-client==2.131.0
-google-auth==2.29.0
-google-auth-httplib2==0.2.0
-google-cloud-aiplatform==1.52.0
-google-cloud-bigquery==3.23.1
-google-cloud-core==2.4.1
-google-cloud-resource-manager==1.12.3
-google-cloud-storage==2.16.0
-google-crc32c==1.5.0
-google-generativeai==0.5.4
-google-resumable-media==2.7.0
-googleapis-common-protos==1.61.0
-gptcache==0.1.43
-greenlet==3.0.2
-groq==0.8.0
-grpc-google-iam-v1==0.13.0
-grpcio==1.59.0
-grpcio-status==1.48.2
-gunicorn==20.1.0
-gyp==0.1
-h11==0.14.0
-hdbscan==0.8.33
-hexbytes==0.3.1
-hnswlib==0.8.0
-htbuilder==0.6.2
-html5lib==1.1
-httpcore==1.0.4
-httplib2==0.20.2
-httptools==0.6.1
-httpx==0.27.0
-huggingface-hub==0.23.2
-humanfriendly==10.0
-idna==3.4
-importlib-metadata==6.8.0
-importlib-resources==6.1.0
-inflection==0.5.1
-iniconfig==2.0.0
-instructor==0.5.2
-InstructorEmbedding==1.0.1
-ipfshttpclient==0.8.0a2
-ipython==8.22.2
-isodate==0.6.1
-itsdangerous==2.1.2
-jedi==0.19.1
-jeepney==0.7.1
-Jinja2==3.1.2
-joblib==1.3.2
-JSON-log-formatter==0.5.1
-jsonpatch==1.33
-jsonpointer==2.4
-jsonschema==3.2.0
-jsonschema-specifications==2023.7.1
-jwcrypto==1.5.6
-keyring==23.5.0
-kiwisolver==1.4.5
-kombu==5.3.1
-kubernetes==29.0.0
-lancedb==0.5.7
-langchain==0.1.20
-langchain-community==0.0.38
-langchain-core==0.1.52
-langchain-experimental==0.0.54
-langchain-google-genai==1.0.4
-langchain-groq==0.1.4
-langchain-huggingface==0.0.1
-langchain-objectbox==0.1.0a4
-langchain-openai==0.0.5
-langchain-text-splitters==0.0.2
-langchainhub==0.1.14
-langchainplus-sdk==0.0.10
-langcodes==3.4.0
-langserve==0.2.1
-langsmith==0.1.24
-language-selector==0.1
-language_data==1.2.0
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
-lit==18.1.1
-llvmlite==0.42.0
-load-dotenv==0.1.0
-lockfile==0.12.2
-louis==3.20.0
-lru-dict==1.3.0
-lxml==5.2.1
-macaroonbakery==1.3.1
-Mako==1.1.3
-marisa-trie==1.2.0
-Markdown==3.6
-markdown-it-py==3.0.0
-markdownlit==0.0.7
-MarkupSafe==2.1.3
-marshmallow==3.20.1
-marshmallow-enum==1.5.1
-matplotlib==3.8.3
-matplotlib-inline==0.1.6
-mdurl==0.1.2
-mmh3==4.1.0
-monotonic==1.6
-more-itertools==8.10.0
-motor==3.3.2
-mpmath==1.3.0
-msg-parser==1.2.0
-msgpack==1.0.3
-multiaddr==0.0.9
-multidict==6.0.4
-multiprocess==0.70.15
-murmurhash==1.0.10
-mutagen==1.47.0
-mypy-extensions==1.0.0
-netaddr==1.2.1
-netifaces==0.11.0
-networkx==3.2.1
-nltk==3.8.1
-nodeenv==1.8.0
-numba==0.59.1
-numexpr==2.8.4
-numpy==1.23.5
-nvidia-cublas-cu11==11.10.3.66
-nvidia-cublas-cu12==12.1.3.1
-nvidia-cuda-cupti-cu11==11.7.101
-nvidia-cuda-cupti-cu12==12.1.105
-nvidia-cuda-nvrtc-cu11==11.7.99
-nvidia-cuda-nvrtc-cu12==12.1.105
-nvidia-cuda-runtime-cu11==11.7.99
-nvidia-cuda-runtime-cu12==12.1.105
-nvidia-cudnn-cu11==8.5.0.96
-nvidia-cudnn-cu12==8.9.2.26
-nvidia-cufft-cu11==10.9.0.58
-nvidia-cufft-cu12==11.0.2.54
-nvidia-curand-cu11==10.2.10.91
-nvidia-curand-cu12==10.3.2.106
-nvidia-cusolver-cu11==11.4.0.1
-nvidia-cusolver-cu12==11.4.5.107
-nvidia-cusparse-cu11==11.7.4.91
-nvidia-cusparse-cu12==12.1.0.106
-nvidia-nccl-cu11==2.14.3
-nvidia-nccl-cu12==2.18.1
-nvidia-nvjitlink-cu12==12.4.99
-nvidia-nvtx-cu11==11.7.91
-nvidia-nvtx-cu12==12.1.105
-oauth2client==4.1.3
-oauthlib==3.2.2
-objectbox==4.0.0a4
-olefile==0.46
-ollama==0.2.1
-onnxruntime==1.16.1
-openai==1.30.2
-openapi-schema-pydantic==1.2.4
-openpyxl==3.1.2
-opentelemetry-api==1.24.0
-opentelemetry-exporter-otlp-proto-common==1.24.0
-opentelemetry-exporter-otlp-proto-grpc==1.24.0
-opentelemetry-exporter-otlp-proto-http==1.24.0
-opentelemetry-instrumentation==0.45b0
-opentelemetry-instrumentation-asgi==0.45b0
-opentelemetry-instrumentation-fastapi==0.45b0
-opentelemetry-proto==1.24.0
-opentelemetry-sdk==1.24.0
-opentelemetry-semantic-conventions==0.45b0
-opentelemetry-util-http==0.45b0
-orjson==3.10.3
-outcome==1.3.0.post0
-overrides==7.4.0
-packaging==23.2
-pandas==2.1.4
-pandasai==0.2.15
-paramiko==2.9.3
-parsimonious==0.8.1
-parso==0.8.3
-pastel==0.2.1
-pdfminer.six==20221105
-pdfplumber==0.10.3
-pexpect==4.8.0
-Pillow==10.1.0
-pkginfo==1.8.2
-platformdirs==2.5.1
-plotly==5.21.0
-pluggy==1.5.0
-poetry==1.1.12
-poetry-core==1.0.7
-posthog==3.0.2
-preshed==3.0.9
-prompt-toolkit==3.0.39
-proto-plus==1.23.0
-protobuf==3.20.3
-psycopg2-binary==2.9.7
-ptyprocess==0.7.0
-pulsar-client==3.3.0
-pure-eval==0.2.2
-py==1.11.0
-py-cpuinfo==9.0.0
-pyarrow==13.0.0
-pyasn1==0.5.1
-pyasn1-modules==0.3.0
-pycairo==1.20.1
-pycparser==2.21
-pycryptodome==3.20.0
-pycryptodomex==3.17
-pycups==2.0.1
-pydantic==2.7.1
-pydantic_core==2.18.2
-pydeck==0.8.1b0
-PyDrive==1.3.1
-PyGithub==1.59.1
-Pygments==2.16.1
-PyGObject==3.42.1
-PyJWT==2.8.0
-pylance==0.9.18
-pylev==1.2.0
-pymacaroons==0.13.0
-pymdown-extensions==10.8.1
-pymongo==3.12.3
-Pympler==1.0.1
-PyMuPDF==1.24.2
-PyMuPDFb==1.24.1
-PyNaCl==1.5.0
-pynndescent==0.5.12
-pyOpenSSL==23.0.0
-pypandoc==1.13
-pyparsing==2.4.7
-pypdf==3.17.4
-PyPDF2==3.0.1
-pypdfium2==4.28.0
-PyPika==0.48.9
-pyproject-toml==0.0.10
-pyproject_hooks==1.1.0
-pyreadline3==3.4.1
-Pyrebase4==4.7.1
-pyreqwest_impersonate==0.4.6
-pyRFC3339==1.1
-pyright==1.1.364
-pyrsistent==0.19.3
-pysbd==0.3.4
-PySocks==1.7.1
-pytest==8.2.1
-python-apt==2.4.0+ubuntu3
-python-crontab==3.0.0
-python-dateutil==2.8.2
-python-debian==0.1.43+ubuntu1.1
-python-docx==1.1.2
-python-dotenv==1.0.1
-python-jose==3.3.0
-python-jwt==4.1.0
-python-keycloak==3.7.0
-python-magic==0.4.27
-python-pptx==0.6.23
-pytube==15.0.0
-pytz==2023.3
-pyxdg==0.27
-PyYAML==6.0.1
-ratelimiter==1.2.0.post0
-redis==5.0.1
-referencing==0.30.2
-regex==2023.12.25
-reportlab==4.0.7
-requests==2.31.0
-requests-oauthlib==1.3.1
-requests-toolbelt==0.10.1
-retry==0.9.2
-rich==13.7.1
-rlp==2.0.1
-rpds-py==0.9.2
-rsa==4.9
-safetensors==0.4.3
-schema==0.7.7
-scikit-learn==1.3.2
-scipy==1.11.3
-screen-resolution-extra==0.0.0
-SecretStorage==3.3.1
-selenium==4.21.0
-semver==3.0.1
-sentence-transformers==2.7.0
-sentencepiece==0.1.99
-sgmllib3k==1.0.0
-shapely==2.0.4
-shellingham==1.4.0
-six==1.16.0
-smart-open==7.0.4
-smmap==5.0.1
-sniffio==1.3.0
-sortedcontainers==2.4.0
-soupsieve==2.5
-spacy==3.7.5
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-SQLAlchemy==2.0.30
-sqlparse==0.2.4
-srsly==2.4.8
-sse-starlette==2.1.0
-st-annotated-text==4.0.1
-stack-data==0.6.3
-starlette==0.27.0
-streamlit==1.36.0
-streamlit-camera-input-live==0.2.0
-streamlit-card==1.0.0
-streamlit-chat==0.0.2.2
-streamlit-embedcode==0.1.2
-streamlit-extras==0.3.5
-streamlit-faker==0.0.3
-streamlit-image-coordinates==0.1.6
-streamlit-keyup==0.2.4
-streamlit-toggle-switch==1.0.2
-streamlit-vertical-slider==2.5.5
-sympy==1.12
-systemd-python==234
-tabulate==0.9.0
-tenacity==8.2.3
-text-generation==0.7.0
-thinc==8.2.5
-threadpoolctl==3.2.0
-tiktoken==0.5.2
-tokenizers==0.19.1
-toml==0.10.2
-tomli==2.0.1
-tomlkit==0.9.2
-toolz==0.12.0
-torch==2.1.0
-torchvision==0.16.0
-tornado==6.3.3
-tqdm==4.66.1
-traitlets==5.14.2
-transformers==4.41.1
-trio==0.25.1
-trio-websocket==0.11.1
-triton==2.1.0
-ttystatus==0.38
-typer==0.9.0
-types-requests==2.31.0.20240218
-typing-inspect==0.9.0
-typing_extensions==4.12.0
-tzdata==2023.3
-tzlocal==5.2
-ubuntu-drivers-common==0.0.0
-ubuntu-pro-client==8001
-ufw==0.36.1
-umap-learn==0.5.6
-unattended-upgrades==0.1
-unstructured==0.6.7
-uritemplate==4.1.1
-urllib3==2.2.1
-usb-creator==0.3.7
-utils==1.0.2
-uvicorn==0.23.2
-uvloop==0.19.0
-validators==0.22.0
-varint==1.0.2
-vectorstore==0.0.0
-vine==5.0.0
-virtualenv==20.13.0+ds
-wadllib==1.3.6
-wasabi==1.1.3
-watchdog==3.0.0
-watchfiles==0.21.0
-wcwidth==0.2.6
-weasel==0.4.1
-web3==5.24.0
-webencodings==0.5.1
-websocket-client==1.6.4
-websockets==12.0
-webvtt-py==0.4.6
-Werkzeug==3.0.1
-wikipedia==1.4.0
-wrapt==1.14.1
-wsproto==1.0.0
-xdg==5
-xkit==0.0.0
-xlrd==2.0.1
-XlsxWriter==3.2.0
-xmltodict==0.13.0
-xxhash==3.4.1
-yarl==1.9.2
-youtube-transcript-api==0.6.2
-yt-dlp==2023.12.30
-zipp==3.17.0
+streamlit
+langchain_openai
+langchain
+langchain_core
+langchain_community
+faiss-cpu
+python-dotenv
